# ai_servant_backend

./: README.md  alembic.ini  main.py  pyproject.toml
src/: main.py
src/api/: dependencies.py  docs.py  family.py  foods.py  homes.py  tasks.py  users.py
src/migrations/: env.py
src/migrations/versions/: 2026_02_15_2250-c748994e20bb_init.py  2026_04_01_2347-1fa1a729a94d_add_families.py  2026_04_05_1112-f8432e582d7d_add_max_members_in_families.py
src/models/: families.py  foods.py  homes.py  tasks.py  users.py
src/repositories/: base.py  families.py  homes.py  tasks.py  users.py
src/schemas/: families.py  homes.py  tasks.py  users.py
src/services/: family.py  key_generation.py  task.py  user.py
src/utils/: db_manager.py  exception.py
